Fixed Text-Overflow on Citation Page
allowed the text to respond properly to not ruin the web page on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -561,6 +561,7 @@ nav {
   margin: 2rem auto;
   padding: 0rem 2rem;
   max-width: 800px;
+  overflow: auto;
 }
 
 footer {
